add more details on data to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,9 +15,11 @@ knitr::opts_chunk$set(
 # leaflet.providers
 
 <!-- badges: start -->
+
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/leslie-huang/leaflet.providers?branch=master&svg=true)](https://ci.appveyor.com/project/leslie-huang/leaflet.providers)
 [![Travis build status](https://travis-ci.org/leslie-huang/leaflet.providers.svg?branch=master)](https://travis-ci.org/leslie-huang/leaflet.providers)
 [![Codecov test coverage](https://codecov.io/gh/leslie-huang/leaflet.providers/branch/master/graph/badge.svg)](https://codecov.io/gh/leslie-huang/leaflet.providers?branch=master)
+
 <!-- badges: end -->
 
 The goal of leaflet.providers is to provide regularly updated data on the third-party tile providers supported by `leaflet`. This package is to be used with `leaflet`.
@@ -28,7 +30,7 @@ You can install the released version of leaflet.providers from [CRAN](https://CR
 
 ``` r
 # CRAN version
-install.packages("leaflet.providers")
+<!-- install.packages("leaflet.providers") -->
 ```
 
 
@@ -40,12 +42,18 @@ devtools::install_github("leslie-huang/leaflet.providers")
 ```
 ## Example
 
-
 This is a basic example of the data that is automatically loaded with `leaflet.providers`.
 
+### View supported tile providers
 
 ```{r example}
 library(leaflet.providers)
-## View supported tile providers
-names(providers)
+str(providers)
+
+```
+
+### View snippet of providers.details
+
+```{r example2}
+str(providers.details, vec.len = 1, list.len=3)
 ```
