--- a/README.Rmd
+++ b/README.Rmd
@@ -44,15 +44,24 @@ devtools::install_github("leslie-huang/leaflet.providers")
 
 This is a basic example of the data that is automatically loaded with `leaflet.providers`.
 
+### View Leaflet.js version number from which the data is derived
+
+```{r example0}
+library(leaflet.providers)
+providers_data <- providers()
+
+providers_data$version_num
+```
+
 ### View supported tile providers
 
 ```{r example}
-library(leaflet.providers)
-str(providers)
+str(providers_data$providers)
+
 ```
 
 ### View snippet of providers.details
 
 ```{r example2}
-str(providers.details, vec.len = 1, list.len=3)
+str(providers_data$providers_details, vec.len = 1, list.len=3)
 ```
