--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
-[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/leslie-huang/leaflet-providers?branch=master&svg=true)](https://ci.appveyor.com/project/leslie-huang/leaflet-providers)
+[![Build status](https://ci.appveyor.com/api/projects/status/jn298w6o6pf8mpx1?svg=true)](https://ci.appveyor.com/project/leslie-huang/leaflet-providers)
 [![Travis build status](https://travis-ci.org/leslie-huang/leaflet.providers.svg?branch=master)](https://travis-ci.org/leslie-huang/leaflet.providers)
 [![Codecov test coverage](https://codecov.io/gh/leslie-huang/leaflet.providers/branch/master/graph/badge.svg)](https://codecov.io/gh/leslie-huang/leaflet.providers?branch=master)
 
