--- a/README.Rmd
+++ b/README.Rmd
@@ -45,36 +45,47 @@ devtools::install_github("rstudio/leaflet.providers")
 
 The following are basic example of the default providers data that comes `leaflet.providers` as well as the available methods to fetch and load custom providers.
 
-### Default providers and providers' details that come pre-loaded with the package
+### Default providers
 
-<div style = "height:150px; overflow-y: scroll;">
-
-```{r get_providers_ex}
+```{r providersdefault, eval = FALSE}
 library(leaflet.providers)
 
-providers_default() # at the time of writing, version 1.8.0
+# at the time of writing, version 1.8.0
+str(providers_default()) 
 ```
 
-</div>
-
-
-### Fetch custom providers data, e.g. a previous version
 <div style = "height:150px; overflow-y: scroll;">
 
-```{r customex}
-providers_170 <- get_providers("1.7.0")
+```{r providersdefault1, echo = FALSE}
+library(leaflet.providers)
 
-# Load custom providers data
-use_providers(get_providers("1.7.0"))
+str(providers_default(), list.len = 200)
 ```
 
 </div>
+
+### Fetch custom providers
+
+Users may use a specific version number of `leaflet-providers.js` by passing the version number to `use_providers()`. 
+
+```{r customex}
+# Retrieve v 1.7.0 
+providers_170 <- get_providers("1.7.0") 
+
+# Load custom providers data
+use_providers(providers_170)
+# shorthand method
+use_providers("1.7.0")
+
+# Reset loaded providers to default providers
+use_providers()
+```
 
 Now that `use_providers()` has been called with a custom `leaflet.providers` object obtained via `get_providers()` (in this case, a previous version of the data), [`leaflet`](http://rstudio.github.io/leaflet) will use the custom providers instead of the default provider data.
 
-Note that the package `V8` is required for `get_providers()`.
+> Note that the package `V8` is required for `get_providers()`.
 
-### View the loaded (custom) providers data
+### View the loaded providers data
 
 #### The version number of the source leaflet-providers.js
 
