--- a/README.Rmd
+++ b/README.Rmd
@@ -36,9 +36,8 @@ install.packages("leaflet.providers")
 
 And the development version from [GitHub](https://github.com/) with:
 
-``` {r devtoolsinstall, eval = FALSE}
-# install.packages("devtools")
-devtools::install_github("rstudio/leaflet.providers")
+``` {r pakinstall, eval = FALSE}
+pak::pak("rstudio/leaflet.providers")
 ```
 
 ## Example
