--- a/README.Rmd
+++ b/README.Rmd
@@ -36,9 +36,8 @@ install.packages("leaflet.providers")
 
 And the development version from [GitHub](https://github.com/) with:
 
-``` {r devtoolsinstall, eval = FALSE}
-# install.packages("devtools")
-devtools::install_github("rstudio/leaflet.providers")
+``` {r pakinstall, eval = FALSE}
+pak::pak("rstudio/leaflet.providers")
 ```
 
 ## Example
@@ -81,7 +80,7 @@ use_providers("1.7.0")
 use_providers()
 ```
 
-Now that `use_providers()` has been called with a custom `leaflet.providers` object obtained via `get_providers()` (in this case, a previous version of the data), [`leaflet`](https://rstudio.github.io/leaflet) will use the custom providers instead of the default provider data.
+Now that `use_providers()` has been called with a custom `leaflet.providers` object obtained via `get_providers()` (in this case, a previous version of the data), [`leaflet`](https://rstudio.github.io/leaflet/) will use the custom providers instead of the default provider data.
 
 > Note that the package `V8` is required for `get_providers()`.
 
